MOD - Code Refactoring ADD - New Loader

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,15 +3,21 @@
   "email": "Email",
   "password": "Password",
   "requiredField": "Required field",
-  "shortPassword": "The password must contain at least 6 characters",
   "home": "Home",
-  "movies": "Movies",
-  "movieDuration": "Duration: {duration}",
   "profile": "Profile",
   "settings": "Settings",
   "light": "Light",
   "dark": "Dark",
   "system": "System",
   "genericErrorTitle" : "Generic error",
-  "genericErrorMessage" : "An error occurred"
+  "genericErrorMessage" : "An error occurred",
+  "close": "Close",
+  "retry": "Retry",
+  "login_error": "Error during login",
+  "theme": "Theme",
+  "themeMessage": "Select theme",
+  "logout": "Logout",
+  "logoutMessage" : "Disconnect the current user",
+    "contacts": "Contacts",
+    "welcome": "Welcome {name}"
 }
