--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -3,15 +3,21 @@
   "email": "Email",
   "password": "Password",
   "requiredField": "Campo obbligatorio",
-  "shortPassword": "La password deve contenere almeno 6 caratteri",
   "home": "Home",
-  "movies": "Lista film",
-  "movieDuration": "Durata: {duration}",
   "profile": "Profilo",
   "settings": "Impostazioni",
   "light": "Chiaro",
   "dark": "Scuro",
   "system": "Sistema",
   "genericErrorTitle" : "Errore generico",
-  "genericErrorMessage" : "Si è verificato un errore"
+  "genericErrorMessage" : "Si è verificato un errore",
+  "close": "Chiudi",
+  "retry": "Riprova",
+  "login_error": "Errore durante il login",
+  "theme": "Tema",
+  "themeMessage": "Seleziona il tema",
+  "logout": "Logout",
+  "logoutMessage" : "Disconnetti l'utente corrente",
+  "contacts": "Contatti",
+  "welcome": "Benvenuto {name}"
 }
